--- a/results/report.html
+++ b/results/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,28037],[],[[5,0,1,0,[],[1,123,27913],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,4,[],[0,0,24],[],[[5,0,1,0,[],[0,20,3,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Launch","*/Users/ronharley/AutomatedTests/Kickbotz/Central/Launch.robot","*../Central/Launch.robot","*<p>Kickbotz Execution\x3c/p>","*Boost"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Launch","*/Users/ronharley/AutomatedTests/Kickbotz/Central/Launch.robot","*../Central/Launch.robot","*<p>Kickbotz Execution\x3c/p>","*Boost","*Setup failed:\nNo keyword with name 'Begin Web Test' found.\n\nAlso teardown failed:\nNo keyword with name 'End Web Test' found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:28","fail":0,"id":"s1","label":"Launch","name":"Launch","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Launch","name":"Launch","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1545338870112;
+window.output["baseMillis"] = 1545411137685;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28051;
+window.output["generated"] = 27;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
