fixed resource file

--- a/results/log.html
+++ b/results/log.html
@@ -1732,28 +1732,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,24],[],[[5,0,1,0,[],[0,20,3,6],[[1,7,0,0,0,0,0,0,[0,22,0],[],[[22,5,8]]],[2,9,0,0,0,0,0,0,[0,23,0,10],[],[[23,5,10]]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,11443],[],[[5,0,1,0,[],[0,112,11330,6],[[1,7,8,0,0,0,0,0,[1,113,2560],[[0,9,10,0,11,12,0,0,[1,113,2560],[],[[113,2,13]]]],[]],[0,14,15,0,16,17,0,0,[1,2674,0],[],[]],[0,18,19,0,0,0,0,0,[0,2674,8764],[[0,20,10,0,21,22,0,0,[1,2675,3529],[],[[2675,2,23]]],[0,24,10,0,25,0,0,0,[1,6204,3511],[],[]],[0,26,10,0,27,0,0,0,[1,9715,160],[],[[9875,2,28]]],[0,29,10,0,30,31,0,0,[1,9876,306],[],[[9876,2,32]]],[0,26,10,0,27,0,0,0,[1,10183,95],[],[[10278,2,33]]],[0,29,10,0,30,34,0,0,[1,10278,465],[],[[10278,2,35]]],[0,26,10,0,27,0,0,0,[1,10743,91],[],[[10833,2,36]]],[0,29,10,0,30,37,0,0,[1,10834,390],[],[[10834,2,38]]],[0,39,10,0,40,41,0,0,[0,11225,213],[[0,26,10,0,27,0,0,0,[0,11437,0],[],[]]],[[11437,3,43]]]],[]],[2,44,8,0,0,0,0,0,[1,11438,4],[[0,45,10,0,46,0,0,0,[1,11439,3],[],[[11440,3,48],[11440,3,49],[11441,3,50]]]],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Launch","*/Users/ronharley/AutomatedTests/Kickbotz/Central/Launch.robot","*../Central/Launch.robot","*<p>Kickbotz Execution\x3c/p>","*Boost","*Setup failed:\nNo keyword with name 'Begin Web Test' found.\n\nAlso teardown failed:\nNo keyword with name 'End Web Test' found.","*Begin Web Test","*No keyword with name 'Begin Web Test' found.","*End Web Test","*No keyword with name 'End Web Test' found.","eNqVzTEOwjAMRuGreOtW72yoYoIJwQFC6qoRiX/JdiTa08PAjljf8L6TGYyK0lKq0MB3F3M26JqsysbHHmgpZL6Jh/O55OcDsfMkGpYqX1LXvI6GTx0OdBVHtyz/7n4xE1qDfhmaIU6KIHkVj/EN9cBI+w==","eNqVzSEOAkEMRuGr1K3bGhSOEBQoAgcoMz/ZhmGatJ0EOD0IPME+8b6duzlpp6s20MTngAe79UW84cmbkXaXRD0hMniv5XaxfPEWPV0aH2T0ssxunzqt6Yiw4QX/7n4xq6pV4stQNQR1S8JDI+c38J1Iyw=="]);
+window.output["strings"] = window.output["strings"].concat(["*","*Launch","*/Users/ronharley/AutomatedTests/Kickbotz/Central/Launch.robot","*../Central/Launch.robot","*<p>Kickbotz Execution\x3c/p>","*Boost","*Execution terminated by signal","*Begin Web Test","*Common","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the given <code>url\x3c/code>.\x3c/p>","*about:blank, ${BROWSER}","*Opening browser 'headlessfirefox' to base url 'about:blank'.","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Boost Order","*MensWorkflow","*4didas","*Go To","*<p>Navigates the active browser instance to the provided <code>url\x3c/code>.\x3c/p>","*${ShoeURL}","eNrzL0jNy8xLVygtylFQt0lUyChKTbNVyigpKSi20tcvLy/XS0zJTEks1kvOz9UvLdYvzSkpSkzKzy8u0S3OyE8t1nczNjM0NdbLKMnNUbIjT5+NfqKdOgAK7S+7","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Capture Page Screenshot","*<p>Takes screenshot of the current page and embeds it into log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-9.png\"><img src=\"selenium-screenshot-9.png\" width=\"800px\">\x3c/a>","*Click Element","*<p>Click element identified by <code>locator\x3c/code>.\x3c/p>","*${SelectSize}","*Clicking element '//div[@class='gl-dropdown__select label dropdown-select'][contains(.,'Select size')]'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-10.png\"><img src=\"selenium-screenshot-10.png\" width=\"800px\">\x3c/a>","*${EnterSize10.5}","*Clicking element '//div[@class='gl-square-list__cta'][contains(.,'10.5')]'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-11.png\"><img src=\"selenium-screenshot-11.png\" width=\"800px\">\x3c/a>","*${AddToBag}","*Clicking element '//button[@type='submit'][contains(.,'Add To Bag')]'.","*Wait Until Element Is Visible","*<p>Waits until element <code>locator\x3c/code> is visible.\x3c/p>","*${AddToBagSuccess}","*s1-t1-k3-k9","*Keyword 'Capture Page Screenshot' could not be run on failure: Execution terminated by signal","*End Web Test","*Close Browser","*<p>Closes the current browser.\x3c/p>","*s1-t1-k4-k1","*Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('&lt;urllib3.connection.HTTPConnection object at 0x109065860&gt;: Failed to establish a new connection: [Errno 61] Connection refused',)': /session/e0e4dfb5-615b-ef43-913a-be515bc480cd","*Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('&lt;urllib3.connection.HTTPConnection object at 0x109065978&gt;: Failed to establish a new connection: [Errno 61] Connection refused',)': /session/e0e4dfb5-615b-ef43-913a-be515bc480cd","*Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('&lt;urllib3.connection.HTTPConnection object at 0x107e3b780&gt;: Failed to establish a new connection: [Errno 61] Connection refused',)': /session/e0e4dfb5-615b-ef43-913a-be515bc480cd","eNqVzTEOwkAMBdGruEsXN1R0KKKiQ3CAJesIi11/yXYk4PRQ0KO0U8w7usNJjRZtQgNfQzzYYffiTV58WBO9pNSLRAafdH7ckG+exNJL413VWmJ0fOuwp7MEVp9l6+4fM6F32I+hCgkyJMlTI8cP5DxI2Q=="]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Launch","name":"Launch","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:11","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:11","fail":1,"id":"s1","label":"Launch","name":"Launch","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[19,4,11],[20,4,12]];
+window.output["errors"] = [[111,4,51],[11437,3,43,42],[11440,3,48,47],[11440,3,49,47],[11441,3,50,47]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1545411137685;
+window.output["baseMillis"] = 1545414306711;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27;
+window.output["generated"] = 11451;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
